import new posts from excel

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,11 @@
 <head>
 	<title>Mltraining</title>
 	<link rel="stylesheet" href="/assets/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/application.css">
 	<script src="/assets/jquery-1.8.2.min.js"></script>
 
 	<script src="/assets/bootstrap.min.js"></script>
 
-	<%= stylesheet_link_tag    "application", :media => "all" %>
-	<%= javascript_include_tag "application" %>
-	<%= csrf_meta_tags %>
 </head>
 <body>
 
