--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 
   <div class="actions">
+    <input type="text" name="tag" value="<%= @tag.id %>">
     <%= f.submit %>
   </div>
 <% end %>
