--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
-
+<label>Tag Name:</label><span><%= @tag.id %></span>
+<br>
 <%= link_to 'Edit', edit_tag_path(@tag) %> |
 <%= link_to 'Back', tags_path %>
