--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,27 @@
  */
 
 .select_file {
+    float: left;
+}
+
+#main-navigation {
+  border-top-right-radius: 9px;
+  border-top-left-radius: 9px;
+  background-color: #3399cc;
+  height: 30px;
+  display: block;
+  margin-bottom: 15px;
+}
+
+#main-navigation ul li {
   float: left;
+  margin-right: 0;
+  padding: 5px 5px 0px 15px;
+  display: inline-block;
+}
+
+#main-navigation ul li a {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-size: 16px;
 }
