--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,10 @@
 <html>
 <head>
   <title>MlTraining</title>
-  <link rel="stylesheet" href="/assets/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/application.css">
-  <script src="/assets/jquery-1.8.2.min.js"></script>
-
-  <script src="/assets/bootstrap.min.js"></script>
+  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag "application" %>
+  <%= stylesheet_link_tag "bootstrap.min" %>
+  <%= javascript_include_tag "jquery-1.8.2.min" %>
 
 </head>
 <body>
