--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,9 @@
  */
 
 .select_file {
-    float: left;
+  float: left;
+  text-decoration: none !important;
+  cursor: pointer;
 }
 
 #main-navigation {
