--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -43,7 +43,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" style="width:1000px">
     <div class="modal-content">
       <div class="modal-header">
@@ -153,7 +153,7 @@
         show_table.append(local_tr);
         show_table.append(redis_tr);
 
-        $('#confirmModal').modal('show')
+        $('#confirmModal').show();
         src.textContent = "Show Compare";
         src.disabled = false;
       }
@@ -179,7 +179,7 @@
         }
         src.textContent = "Save";
         src.disabled = false;
-        $('#confirmModal').modal('hide');
+        $('#confirmModal').hide();
       }
     });
   }
