--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,12 @@
 
 </head>
 <body>
-	<div id="main-navigation">
-		<ul class="wat-cf">
+	<div id="main-navigation" class="navbar navbar-inverse" style="border-radius: 0px;">
+		<ul class="wat-cf" style="margin-top: 10px;">
 			<li><a href="/tags">Tags</a></li>
 			<li><a href="/posts">Posts</a></li>
 		</ul>
 	</div>
-<%= yield %>
-
+    <%= yield %>
 </body>
 </html>
