--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,9 +1,9 @@
-<h1>
+<h3>
   Listing tags
   <%= link_to 'New Tag', new_tag_path, {:class => "btn btn-warning"} %>
-</h1>
+</h3>
 
-<table class="table table-hover">
+<table class="table table-hover table-striped">
   <tr>
     <th><input type="checkbox" class="select_all"> Tag</th>
     <!-- <th>is in redis</th> -->
