--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
         <a class="btn btn-primary select_file" onclick="importData()">Select</a>
       </th>
       <th><input type="submit" class="btn btn-danger select_file" value="Import"></th>
-      <th><button class="btn btn-success" onclick="doFeature()">Do Feature</button></th>
+      <th><button class="btn btn-success" onclick="doFeature()">Redo Feature</button></th>
     </tr>
     </table>
   <% end %>
