--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>
         <div style="display:none">
-          <input type="file" id="import_file" class="btn btn-primary select_file" name="file[file]" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
+          <input type="file" id="import_file" class="btn btn-primary select_file" name="file[file]">
         </div>
         <a class="btn btn-primary select_file" onclick="importData()">Select</a>
       </th>
