--- a/app/views/fnfps/index.html.erb
+++ b/app/views/fnfps/index.html.erb
@@ -5,6 +5,7 @@
     <th>Post</th>
     <th>Tag</th>
     <th>Flag</th>
+    <th>content</th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,6 +16,7 @@
     <td><%= fnfp.post_id %></td>
     <td><%= fnfp.tag_id %></td>
     <td><%= fnfp.flag %></td>
+    <td><%= fnfp.content %></td>
     <td><%= link_to 'Show', fnfp %></td>
     <td><%= link_to 'Edit', edit_fnfp_path(fnfp) %></td>
     <td><%= link_to 'Destroy', fnfp, method: :delete, data: { confirm: 'Are you sure?' } %></td>
